[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/pictures/hollow_square.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/hook_tip.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("out:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("out/in:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("out:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("out/in:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "animation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("out:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("out/in:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("out:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("out/in:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="hook_tip" type="Spatial"]
script = ExtResource( 2 )

[node name="texture" type="Control" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="animation" type="AnimationPlayer" parent="texture"]
anims/RESET = SubResource( 3 )
anims/animation = SubResource( 2 )

[node name="out" type="TextureRect" parent="texture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true

[node name="in" type="TextureRect" parent="texture/out"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 1 )
expand = true

[node name="visible_notif" type="VisibilityNotifier" parent="."]

[node name="shows_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="screen_entered" from="visible_notif" to="." method="screen_entered"]
[connection signal="screen_exited" from="visible_notif" to="." method="screen_exited"]
[connection signal="timeout" from="shows_timer" to="." method="show_timer"]
